[gd_scene load_steps=13 format=3 uid="uid://bfxmdbxcjx1mg"]

[ext_resource type="Script" uid="uid://bibpgh1wpq85e" path="res://ball_sprite.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://cwy34xppk8go5" path="res://character_body_2d.gd" id="2_1bvp3"]
[ext_resource type="Script" uid="uid://cgf17gx47yxj2" path="res://ball_rigid_body_2d.gd" id="2_h2yge"]
[ext_resource type="Script" uid="uid://dvbo1cw5ddn11" path="res://block_manager.gd" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://d3k1uoo0loxdy" path="res://slow_zone.gd" id="5_lquwl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(207, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(10, 1280)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mycd"]
size = Vector2(720, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lquwl"]
size = Vector2(1280, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0xm2m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_272bh"]
size = Vector2(720, 300)

[node name="main" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Pad" type="StaticBody2D" parent="."]
position = Vector2(-100, 600)
script = ExtResource("2_1bvp3")

[node name="ShapeCast2D" type="ShapeCast2D" parent="Pad"]
shape = SubResource("RectangleShape2D_ig7tw")
target_position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pad"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="ColorRect" type="ColorRect" parent="Pad"]
offset_left = -103.0
offset_top = -10.0
offset_right = 104.0
offset_bottom = 12.0

[node name="Walls" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(-360.5, 0)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(0, -640)
rotation = -3.14159
shape = SubResource("RectangleShape2D_7mycd")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(360, 0)
rotation = -1.5708
shape = SubResource("RectangleShape2D_lquwl")

[node name="BottomStaticBody2D" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls/BottomStaticBody2D"]
position = Vector2(0, 640)
shape = SubResource("WorldBoundaryShape2D_0xm2m")

[node name="Ball" type="RigidBody2D" parent="." groups=["ball"]]
mass = 0.01
script = ExtResource("2_h2yge")

[node name="BallSprite" type="Sprite2D" parent="Ball"]
script = ExtResource("2_0xm2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball" groups=["ball"]]
shape = SubResource("CircleShape2D_h2yge")

[node name="TrajectoryLine2D" type="Line2D" parent="Ball"]

[node name="BlockManager" type="Node2D" parent="."]
script = ExtResource("4_1bvp3")

[node name="ShiftTimer" type="Timer" parent="BlockManager"]
wait_time = 5.0
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = -301.0
offset_top = 287.0
offset_right = -225.0
offset_bottom = 310.0
text = "0"

[node name="SlowZone" type="Area2D" parent="."]
visible = false
script = ExtResource("5_lquwl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowZone"]
position = Vector2(0, 485)
shape = SubResource("RectangleShape2D_272bh")

[connection signal="body_entered" from="SlowZone" to="SlowZone" method="_on_body_entered"]
[connection signal="body_exited" from="SlowZone" to="SlowZone" method="_on_body_exited"]
